<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/title_Filter_TextView"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:gravity="center"
    android:text="@string/filterTitle"
    android:textAllCaps="false"
    android:textSize="32sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline30"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="@dimen/vertical_2" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline29"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="@dimen/vertical_1" />

  <TextView
    android:id="@+id/price_title_Filter_TextView"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/filterPrice"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toBottomOf="@+id/title_Filter_TextView" />

  <LinearLayout
    android:id="@+id/price_Filter_linearLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toBottomOf="@+id/price_title_Filter_TextView">
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView
        android:id="@+id/min_price_Filter_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minPrice" />
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
          android:id="@+id/value_min_price_Filter_editText"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:hint="0000"
          android:inputType="number"/>
        <TextView
          android:id="@+id/chf_min_Filter_TextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/chf" />
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView
        android:id="@+id/max_price_Filter_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maxPrice" />
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
          android:id="@+id/value_max_price_Filter_editText"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:hint="0000"
          android:inputType="number"/>
        <TextView
          android:id="@+id/chf_max_Filter_TextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/chf" />
      </LinearLayout>
    </LinearLayout>

  </LinearLayout>
  <TextView
    android:id="@+id/location_title_Filter_textView"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/filterLocation"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toBottomOf="@+id/price_Filter_linearLayout" />

  <LinearLayout
    android:id="@+id/location_Filter_linearLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toBottomOf="@+id/location_title_Filter_textView"
    app:layout_constraintBottom_toTopOf="@+id/clear_Filter_button">

    <EditText
      android:id="@+id/location_Filter_editText"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="match_parent"
      android:layout_marginEnd="16dp"
      />

    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView
        android:id="@+id/location_distance_Filter_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationRange" />
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
          android:id="@+id/value_range_Filter_editText"
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:hint="0000"
          android:inputType="number"
          />
        <TextView
          android:id="@+id/km_Filter_TextView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/km" />
      </LinearLayout>
    </LinearLayout>

  </LinearLayout>

  <Button
    android:id="@+id/clear_Filter_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:paddingStart="40dp"
    android:paddingEnd="16dp"
    android:background="@drawable/style_secondary"
    android:drawableEnd="@drawable/ic_clear"
    android:layout_marginStart="@dimen/margin_button"
    android:layout_marginEnd="@dimen/margin_button"
    android:text="@string/resetFilter"
    android:textAllCaps="false"
    android:textColor="@color/primaryStart"
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toBottomOf="@+id/location_Filter_linearLayout" />


  <Button
    android:id="@+id/confirm_Filter_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="@dimen/margin_button"
    android:layout_marginEnd="@dimen/margin_button"
    android:background="@drawable/style_primary"
    android:text="@string/confirmFilter"
    android:textAllCaps="false"
    android:textColor=" #FFFFFF "
    android:textSize="16sp"
    app:layout_constraintEnd_toStartOf="@+id/guideline30"
    app:layout_constraintStart_toStartOf="@+id/guideline29"
    app:layout_constraintTop_toBottomOf="@+id/clear_Filter_button" />




</androidx.constraintlayout.widget.ConstraintLayout>