...
    <string name="contentDescFullScreenImage">Photo</string>

    <!-- FullScreenImageActivity stuff -->
    <string name="localSaved_Favorite">Failed to save locally the new favorites</string>

    <!-- FilterActivity stuff -->
    <string name="filterTitle">Filter</string>
    <string name="filterPrice">Price range:</string>
    <string name="minPrice">min price</string>
    <string name="maxPrice">max price</string>
    <string name="chf">CHF/ month</string>
    <string name="filterLocation">Location:</string>
    <string name="locationRange">location range :</string>
    <string name="km">kilometres</string>
    <string name="confirmFilter">Save</string>
    <string name="resetFilter">Remove all</string>
    <string name="card_edit">Edit Ad</string>
    <string name="card_delete">Delete</string>
    <string name="action_bar_open">open</string>
    <string name="action_bar_close">close</string>

</resources>
...
