...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

        <LinearLayout
            android:id="@+id/columnLayout_Scrolling_LinearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

...

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/filter_Scrolling_button"
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_button"
                    android:background="@drawable/style_secondary"
                    android:drawableTop="@drawable/ic_filter"
...
